--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
                         <ul class="nav masthead-nav">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="code.html">Code</a></li>
+                            <li><a href="talks.html">Talks</a></li>
                             <li><a href="http://www.scala4datascience.com">Book</a></li>
                             <li><a href="blog/index.html">Blog</a></li>
                             <li><a href="contact.html">About</a></li>
