--- a/src/code.html
+++ b/src/code.html
@@ -109,6 +109,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Code</a></li>
+            <li class="active"><a href="talks.html">Talks</a></li>
             <li><a href="http://www.scala4datascience.com">Book</a></li>
             <li><a href="blog/index.html">Blog</a></li>
             <li><a href="contact.html">About</a></li>
