--- a/src/contact.html
+++ b/src/contact.html
@@ -53,6 +53,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="code.html">Code</a></li>
+            <li><a href="talks.html">Talks</a></li>
             <li><a href="http://www.scala4datascience.com">Book</a></li> <li><a href="blog/index.html">Blog</a></li>
             <li class="active"><a href="contact.html">About</a></li>
           </ul>
