--- a/src/talks.html
+++ b/src/talks.html
@@ -87,7 +87,9 @@
 
       <div class="row talk-row">
         <div class="col-md-6">
-          <img src="img/talks-plotcon.png" class="presentation-thumbnail"/>
+          <a href="http://scala-plotly-client-example.com.s3-website-eu-west-1.amazonaws.com/#/1">
+            <img src="img/talks-plotcon.png" class="presentation-thumbnail" alt="Become one of the cool kids on Github"/>
+          </a>
         </div>
         <div class="col-md-6">
           <h3 class="slide-title">Become one of the cool kids on Github</h3>
@@ -102,7 +104,9 @@
 
       <div class="row">
         <div class="col-md-6">
-          <img src="img/talks-scala4humans.png" class="presentation-thumbnail"/>
+          <a href="https://www.youtube.com/watch?v=buGcwOWyRLo">
+            <img src="img/talks-scala4humans.png" class="presentation-thumbnail"/>
+          </a>
         </div>
         <div class="col-md-6">
           <h3 class="slide-title">Scala in production</h3>
