Remove reference to SCL

--- a/src/contact.html
+++ b/src/contact.html
@@ -68,7 +68,7 @@
         </div>
         <div class="row">
             <div class="col-md-7">
-                <p class="contact-row">I live in <span itemprop="workLocation">London</span> and work as a data engineer at <a href="http://www.theasi.co">the ASI</a>. Prior to that, I was a <a href="http://en.wikipedia.org/wiki/Data_architect">data architect</a> at <a href="http://scl.cc">SCL Elections</a>. I have recently completed a PhD in computational physics at <span itemprop="alumniOf">Cambridge</span>, working on <a href="http://en.wikipedia.org/wiki/Quantum_Monte_Carlo">quantum Monte Carlo</a> methods.</p>
+                <p class="contact-row">I live in <span itemprop="workLocation">London</span> and work as a data engineer at <a href="https://www.asidatascience.com">ASI Data Science</a>. I have recently completed a PhD in computational physics at <span itemprop="alumniOf">Cambridge</span>, working on <a href="http://en.wikipedia.org/wiki/Quantum_Monte_Carlo">quantum Monte Carlo</a> methods.</p>
                 <!-- Icons downloaded from: https://www.iconfinder.com/icons/287725/github_icon#size=128 -->
                 <p class="contact-row"><span class="contact-key"><img src="img/1414849266_mail-128.png" height=36 width=36 alt="email"/></span><span itemprop="email" class="contact-value"><script type="text/javascript">
 //<![CDATA[
