Fix broken link in talks page

--- a/src/talks.html
+++ b/src/talks.html
@@ -69,7 +69,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Code</a></li>
+            <li><a href="code.html">Code</a></li>
             <li><a href="#" class="active">Talks</a></li>
             <li><a href="http://www.scala4datascience.com">Book</a></li>
             <li><a href="blog/index.html">Blog</a></li>
