--- a/src/talks.html
+++ b/src/talks.html
@@ -70,7 +70,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="code.html">Code</a></li>
-            <li><a href="#" class="active">Talks</a></li>
+            <li class="active"><a href="#">Talks</a></li>
             <li><a href="http://www.scala4datascience.com">Book</a></li>
             <li><a href="blog/index.html">Blog</a></li>
             <li><a href="contact.html">About</a></li>
@@ -97,6 +97,7 @@
           <p>
             Why do some repositories grow popular while others remain relatively unknown? I try to achieve a quantitative understanding of the drivers of popularity in open source.
           </p>
+          <p><a href="https://www.youtube.com/watch?v=Q3Pg1NFCNwQ&t=1s">Video</a></p>
           <p><a href="http://scala-plotly-client-example.com.s3-website-eu-west-1.amazonaws.com/#/1">Slides</a></p>
         </div>
       </div>
