Update copy to include oss in contacts page

--- a/src/contact.html
+++ b/src/contact.html
@@ -70,7 +70,12 @@
             <div class="col-md-7">
                 <p class="contact-row">
                   I live in <span itemprop="workLocation">London</span> and work as a 
-                  data engineer at <a href="https://www.asidatascience.com">ASI Data Science</a>. 
+                  data engineer at <a href="https://www.asidatascience.com">ASI Data Science</a>.
+                  I am a core contributor to <a href="http://jupyter.org/widgets.html">Jupyter widgets</a>
+                  and the main author of <a href="http://jupyter-gmaps.readthedocs.io/en/latest/gmaps.html">jupyter-gmaps</a>,
+                  a Python library for visualizing geographical data on Google Maps.
+                </p>
+                <p class="contact-row">
                   I have recently completed a PhD in computational physics at 
                   <span itemprop="alumniOf">Cambridge</span>, working on 
                   <a href="http://en.wikipedia.org/wiki/Quantum_Monte_Carlo">quantum Monte Carlo</a> 
