Fix following Google fonts weigth change

--- a/src/code.html
+++ b/src/code.html
@@ -24,7 +24,7 @@
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400' rel='stylesheet' type='text/css'>
 
     <!-- Customised stylesheets -->
     <link href="main.css" rel="stylesheet">
@@ -164,7 +164,7 @@
 
                 <p>
                     Jupyter widgets are an important part of the Jupyter ecosystem.
-                    They have been developed alongside Jupyter notebooks, with many
+                    They have been developed alongside Jupyter notebook, with many
                     of the same contributors.
                 </p>
                 <p>
