--- a/src/talks.html
+++ b/src/talks.html
@@ -87,6 +87,21 @@
 
       <div class="row talk-row">
         <div class="col-md-6">
+          <a href="https://www.youtu.be/qAF-WCF_aSM">
+            <img src="img/talks-pycon-2017.png" class="presentation-thumbnail" alt="Add GUIs to data science workflows with Jupyter wigets"/>
+          </a>
+        </div>
+        <div class="col-md-6">
+          <h3 class="slide-title">Add GUIs to data science workflows with Jupyter widgets</h3>
+          <p><a href="http://2017.pyconuk.org/">Pycon UK</a>, October 2017</p>
+          <p>You can use <a href="https://ipywidgets.readthedocs.io/en/latest/">Jupyter widgets</a> to build user interfaces for controlling data science pipelines. In this talk, I build a widget to interactively label a training set and retrain a model.</p>
+          <p><a href="https://youtu.be/qAF-WCF_aSM">Video</a></p>
+          <p><a href="https://github.com/pbugnion/jupyter-widgets-for-data-science-guis">Code</a></p>
+        </div>
+      </div>
+
+      <div class="row talk-row">
+        <div class="col-md-6">
           <a href="http://scala-plotly-client-example.com.s3-website-eu-west-1.amazonaws.com/#/1">
             <img src="img/talks-plotcon.png" class="presentation-thumbnail" alt="Become one of the cool kids on Github"/>
           </a>
