--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <script src="https://code.jquery.com/jquery.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
         <title>Pascal Bugnion</title>
 
