Add Strata 2018 talk

--- a/src/talks.html
+++ b/src/talks.html
@@ -89,6 +89,21 @@
       <div class="row talk-row">
         <div class="col-md-6">
           <a href="https://www.youtu.be/qAF-WCF_aSM">
+            <img src="img/talks-strata-2018.png" class="presentation-thumbnail" alt="Add GUIs to data science workflows with Jupyter wigets"/>
+          </a>
+        </div>
+        <div class="col-md-6">
+          <h3 class="slide-title">Jupyter widgets for human in the loop data science</h3>
+          <p><a href="https://conferences.oreilly.com/strata/strata-eu">Strata London</a>, May 2018</p>
+          <p>You can use <a href="https://ipywidgets.readthedocs.io/en/latest/">Jupyter widgets</a> to build user interfaces for controlling data science pipelines.</p>
+	  <p>In this talk, I show how widgets can be used to enhance your data science workflow by allowing you to concentrate on visualizations and abstrations rather than the minutiae of translating your thoughts into code. I talk through several widgets that we use every day at <a href="https://www.asidatascience.com">ASI Data Science</a>.</p>
+          <p><a href="https://www.slideshare.net/PascalBugnion/jupyter-widgets-for-human-in-the-loop-data-science" target="_blank">Slides</a></p>
+        </div>
+      </div>
+
+      <div class="row talk-row">
+        <div class="col-md-6">
+          <a href="https://www.youtu.be/qAF-WCF_aSM">
             <img src="img/talks-pycon-2017.png" class="presentation-thumbnail" alt="Add GUIs to data science workflows with Jupyter wigets"/>
           </a>
         </div>
