Update youtube link

--- a/src/talks.html
+++ b/src/talks.html
@@ -111,7 +111,7 @@
           <h3 class="slide-title">Add GUIs to data science workflows with Jupyter widgets</h3>
           <p><a href="http://2017.pyconuk.org/">Pycon UK</a>, October 2017</p>
           <p>You can use <a href="https://ipywidgets.readthedocs.io/en/latest/">Jupyter widgets</a> to build user interfaces for controlling data science pipelines. In this talk, I build a widget to interactively label a training set and retrain a model.</p>
-          <p><a href="https://youtu.be/qAF-WCF_aSM">Video</a></p>
+          <p><a href="https://www.youtube.com/watch?v=qAF-WCF_aSM">Video</a></p>
           <p><a href="https://github.com/pbugnion/jupyter-widgets-for-data-science-guis">Code</a></p>
         </div>
       </div>
