--- a/src/talks.html
+++ b/src/talks.html
@@ -88,6 +88,25 @@
 
       <div class="row talk-row">
         <div class="col-md-6">
+          <img src="img/talks-strata-2018.png" class="presentation-thumbnail" alt="Add GUIs to data science workflows with Jupyter wigets"/>
+        </div>
+        <div class="col-md-6">
+          <h3 class="slide-title">Building Interactive Dashboards in Python: A Hands-on Introduction for Data Scientists</h3>
+          <p><a href="https://odsc.com/london/">ODSC Europe</a>, September 2018</p>
+          <p>Plotly Dash lets you build interactive dashboards in Python.</p>
+          <p>By allowing data scientists to develop data-centric
+            interactive web applications in a language they are
+            already familiar with, Dash allows replacing slide decks
+            with dashboards for disseminating the results of the data
+            science process. In this talk, I demonstrate how to build
+            a web application that wraps a trained model from scratch.
+          </p>
+          <p><a href="https://github.com/pbugnion/tweets-sentiment-analysis-demo-app" target="_blank">Code</a></p>
+        </div>
+      </div>
+
+      <div class="row talk-row">
+        <div class="col-md-6">
           <a href="https://www.youtu.be/qAF-WCF_aSM">
             <img src="img/talks-strata-2018.png" class="presentation-thumbnail" alt="Add GUIs to data science workflows with Jupyter wigets"/>
           </a>
