--- a/src/talks.html
+++ b/src/talks.html
@@ -88,7 +88,7 @@
 
       <div class="row talk-row">
         <div class="col-md-6">
-          <img src="img/talks-strata-2018.png" class="presentation-thumbnail" alt="Add GUIs to data science workflows with Jupyter wigets"/>
+          <img src="img/talks-odsc-2018.png" class="presentation-thumbnail" alt="Add GUIs to data science workflows with Jupyter wigets"/>
         </div>
         <div class="col-md-6">
           <h3 class="slide-title">Building Interactive Dashboards in Python: A Hands-on Introduction for Data Scientists</h3>
