--- a/src/talks.html
+++ b/src/talks.html
@@ -93,7 +93,7 @@
         <div class="col-md-6">
           <h3 class="slide-title">Building Interactive Dashboards in Python: A Hands-on Introduction for Data Scientists</h3>
           <p><a href="https://odsc.com/london/">ODSC Europe</a>, September 2018</p>
-          <p>Plotly Dash lets you build interactive dashboards in Python.</p>
+          <p><a href="https://plot.ly/products/dash/">Plotly Dash</a> lets you build interactive dashboards in Python.</p>
           <p>By allowing data scientists to develop data-centric
             interactive web applications in a language they are
             already familiar with, Dash allows replacing slide decks
