Reduce size of thumbnails

--- a/src/talks.html
+++ b/src/talks.html
@@ -34,6 +34,7 @@
       .presentation-thumbnail {
         max-width: 100%;
         margin-bottom: 20px;
+        width: 100%;
       }
 
       .talk-row {
