Add link to slides

--- a/src/talks.html
+++ b/src/talks.html
@@ -103,6 +103,7 @@
             a web application that wraps a trained model from scratch.
           </p>
           <p><a href="https://github.com/pbugnion/tweets-sentiment-analysis-demo-app" target="_blank">Code</a></p>
+          <p><a href="https://www.slideshare.net/PascalBugnion/building-interactive-dashboards-with-python" target="_blank">Slides</a></p>
         </div>
       </div>
 
