Add dbc to code section

--- a/src/code.html
+++ b/src/code.html
@@ -131,6 +131,7 @@
             <li role="presentation" class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
             <li role="presentation"><a href="#gmaps" role="tab" data-toggle="tab">gmaps</a></li>
             <li role="presentation"><a href="#widgets" role="tab" data-toggle="tab">Jupyter widgets</a></li>
+            <li role="presentation"><a href="#dash-bootstrap-components" role="tab" data-toggle="tab">Dash Bootstrap components</a></li>
         </ul>
 
         <div class="tab-content">
@@ -145,6 +146,7 @@
                 <dl class="code-listing">
                     <dt><a href="#gmaps">gmaps</a></dt><dd>Google maps in the IPython notebook</dd>
                     <dt><a href="#widgets">Jupyter widgets</a></dt><dd>Interactive data visualization in Jupyter notebooks</dd>
+                    <dt><a href="#dash-bootstrap-components">Dash Bootstrap components</a></dt><dd>Responsive layouts and components for Plotly Dash</dd>
                 </dl>
             </div>
 
@@ -187,6 +189,18 @@
 
                 <div class=code-link-button-container>
                     <a itemprop="url" role="button" class="btn btn-lg code-link-button" href="https://github.com/pbugnion/gmaps">Homepage</a>
+                </div>
+            </div> <!-- gmaps -->
+
+            <div itemscope itemtype="http://schema.org/SoftwareApplication" role="tabpanel" class="tab-pane fade in code-tabpane" id="dash-bootstrap-components">
+                <h2 itemprop="name">Dash Bootstrap components</h2>
+                <p class=lead>Responsive layouts and components for Plotly Dash</p>
+                <p>Dash Bootstrap components makes it easy to structure and build your <a href="https://dash.plot.ly/">Plotly Dash</a> applications by providing layouts and high-level components.</p>
+
+                <img src="/img/dbc.png" width="100%" />
+
+                <div class=code-link-button-container>
+                  <a itemprop="url" role="button" class="btn btn-lg code-link-button" href="https://dash-bootstrap-components.opensource.asidatascience.com/">Documentation</a>
                 </div>
             </div> <!-- gmaps -->
 
