Add keywords meta

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         <title>Pascal Bugnion</title>
 
         <meta name="description" content="Pascal Bugnion is a data engineer and open source enthusiast." />
+        <meta name="keywords" content="Pascal Bugnion,Bugnion,data engineer,open source" />
 
          <!-- Twitter Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
