--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,6 @@
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400' rel='stylesheet' type='text/css'>
 
-
-
          <!-- Custom stylesheets -->
          <link rel="stylesheet" href="cover.css"></link>
          <link rel="stylesheet" href="landing.css"></link>
@@ -53,10 +51,8 @@
 
                 <div class="inner cover">
                     <h1 id="cover-heading">Hi. I&#8217;m <span itemprop="givenName">Pascal</span>.</h1>
-                    <p class="lead">I'm a <span itemprop="jobTitle">data engineer</span> and open source enthusiast. This is my site.
-                    It's both a repository for software that I have written, and a blog.</p>
-                    <p class="lead">I write predominantly about data science and engineering, maths, and
-                    software.</p>
+                    <p class="lead">I'm an <span itemprop="jobTitle">engineering team lead</span> and <span itemprop="jobTitle">technical architect</span>. I build tools for data scientists.</p>
+                    <p class="lead">This is my site. It is a repository for talks I have given, an index for software I have written, and a blog for my thoughts about data engineering, maths, and software development.</p>
                 </div>
             </div>
         </div>
