Centralize person meta information

--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,28 @@
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400' rel='stylesheet' type='text/css'>
 
+        <!-- Meta information -->
+        <script type="application/ld+json">
+         {
+           "@context": "https://schema.org",
+           "@type": "Person",
+           "url": "https://pascalbugnion.net",
+           "name": "Pascal Bugnion",
+           "givenName": "Pascal",
+           "familyName": "Bugnion",
+           "jobTitle": "Engineering team lead",
+           "email": "pascal@bugnion.org",
+           "homeLocation": "London"
+         }
+        </script>
+
          <!-- Custom stylesheets -->
          <link rel="stylesheet" href="cover.css"></link>
          <link rel="stylesheet" href="landing.css"></link>
     </head>
 
     <body>
-    <div class="site-wrapper" itemscope itemtype="https://schema.org/Person">
+    <div class="site-wrapper">
 
         <div class="site-wrapper-inner">
 
@@ -37,7 +52,7 @@
 
                 <div class="masthead clearfix">
                     <div class="inner">
-                        <h3 class="masthead-brand"><span itemprop="name"><span itemprop="givenName">Pascal</span> <span itemprop="familyName">Bugnion</span></span></h3>
+                        <h3 class="masthead-brand">Pascal Bugnion</h3>
                         <ul class="nav masthead-nav">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="code.html">Code</a></li>
@@ -50,8 +65,8 @@
                 </div>
 
                 <div class="inner cover">
-                    <h1 id="cover-heading">Hi. I&#8217;m <span itemprop="givenName">Pascal</span>.</h1>
-                    <p class="lead">I'm an <span itemprop="jobTitle">engineering team lead</span> and <span itemprop="jobTitle">technical architect</span>. I build tools for data scientists.</p>
+                    <h1 id="cover-heading">Hi. I&#8217;m Pascal.</h1>
+                    <p class="lead">I'm an engineering team lead and technical architect. I build tools for data scientists.</p>
                     <p class="lead">This is my site. It is a repository for talks I have given, an index for software I have written, and a blog for my thoughts about data engineering, maths, and software development.</p>
                 </div>
             </div>
