--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                 <div class="inner cover">
                     <h1 id="cover-heading">Hi. I&#8217;m Pascal.</h1>
                     <p class="lead">I'm an engineering team lead and technical architect. I build tools for data scientists.</p>
-                    <p class="lead">This is my site. It is a repository for talks I have given, an index for software I have written, and a blog for my thoughts about data engineering, maths, and software development.</p>
+                    <p class="lead">This is my site. It is a repository for talks and software I have written and a blog about data engineering, maths, and software development.</p>
                 </div>
             </div>
         </div>
