Make landing page easier to read

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
            "name": "Pascal Bugnion",
            "givenName": "Pascal",
            "familyName": "Bugnion",
-           "jobTitle": "Engineering team lead",
+           "jobTitle": "Technical architect",
            "email": "pascal@bugnion.org",
            "homeLocation": "London"
          }
@@ -64,9 +64,9 @@
                     </div>
                 </div>
 
-                <div class="inner cover">
+                <div class="inner-cover">
                     <h1 id="cover-heading">Hi. I&#8217;m Pascal.</h1>
-                    <p class="lead">I'm an engineering team lead and technical architect. I build tools for data scientists.</p>
+                    <p class="lead">I'm a technical architect. I build tools for data scientists.</p>
                     <p class="lead">This is my site. It is a repository for talks and software I have written and a blog about data engineering, maths, and software development.</p>
                 </div>
             </div>
