--- a/src/contact.html
+++ b/src/contact.html
@@ -32,6 +32,10 @@
         .contact-row {
             margin-bottom : 1.2em ;
         }
+
+     .contact-links-row {
+       margin-top: 2em;
+     }
     </style>
 
   </head>
@@ -69,19 +73,21 @@
         </div>
         <div class="row">
             <div class="col-md-7">
-                <p class="contact-row">
-                  I live in <span itemprop="workLocation">London</span> and work as a 
-                  data engineer at <a href="https://www.asidatascience.com">ASI Data Science</a>.
-                  I am a core contributor to <a href="http://jupyter.org/widgets.html">Jupyter widgets</a>
-                  and the main author of <a href="http://jupyter-gmaps.readthedocs.io/en/latest/gmaps.html">jupyter-gmaps</a>,
-                  a Python library for visualizing geographical data on Google Maps.
+              <p class="contact-row">
+                I am a technical team lead for software engineering teams. I build tools for data science and machine learning. I currently live in London and work at <a href="https://faculty.ai/">Faculty</a>, as part of the <a href="https://faculty.ai/products-services/platform/">Faculty Platform</a> team.
                 </p>
                 <p class="contact-row">
-                  I have recently completed a PhD in computational physics at 
-                  <span itemprop="alumniOf">Cambridge</span>, working on 
-                  <a href="http://en.wikipedia.org/wiki/Quantum_Monte_Carlo">quantum Monte Carlo</a> 
-                  methods.
+                  Outside of my day job, I am a contributor to open source, specially in the Jupyter and Plotly ecosystem. I am a core contributor to <a href="https://jupyter.org/widgets">Jupyter widgets</a> and the main author of <a href="/code.html">several Python libraries</a>.
                 </p>
+                <p class="contact-row">
+                  I hold a PhD from Cambridge University in <a href="https://www.tcm.phy.cam.ac.uk/people/staff.html">theoretical solid state physics</a>, working on <a href="https://en.wikipedia.org/wiki/Quantum_Monte_Carlo">quantum Monte Carlo</a> methods.
+                </p>
+
+            </div>
+            <div class="col-md-5"><img itemprop="image" src="/img/Headshot-Pascal-1.jpg" alt="Photo of Pascal Bugnion" width="100%""/></div>
+        </div>
+        <div class="row contact-links-row">
+          <div class="col-md-6">
                 <!-- Icons downloaded from: https://www.iconfinder.com/icons/287725/github_icon#size=128 -->
                 <p class="contact-row"><span class="contact-key"><img src="img/1414849266_mail-128.png" height=36 width=36 alt="email"/></span><span itemprop="email" class="contact-value"><script type="text/javascript">
 //<![CDATA[
@@ -99,11 +105,13 @@ while(x=eval(x));
 </script></span>
 
                 </p>
-                <p class="contact-row"><span class="contact-key"><img src="img/1419562184_linkedin-128.png" height=36 width=36 alt="github"/></span><a href="https://uk.linkedin.com/in/pbugnion">linkedin/pbugnion</a></p>
-                <p class="contact-row"><span class="contact-key"><img src="img/1414849458_github-128.png" height=36 width=36 alt="github"/></span><a href="https://github.com/pbugnion">github/pbugnion</a></p>
-            </div>
-            <div class="col-md-5"><img itemprop="image" src="/img/Headshot-Pascal-1.jpg" alt="Photo of Pascal Bugnion" width="100%""/></div>
-
+                <p class="contact-row"><span class="contact-key"><img src="img/1419562184_linkedin-128.png" height=36 width=36 alt="github"/></span><a href="https://uk.linkedin.com/in/pbugnion">pbugnion</a></p>
+                <p class="contact-row"><span class="contact-key"><img src="img/1414849458_github-128.png" height=36 width=36 alt="github"/></span><a href="https://github.com/pbugnion">pbugnion</a></p>
+          </div>
+          <div class="col-md-6">
+            <p class="contact-row"><span class="contact-key"><img src="img/twitter.png" height=36 width=36 alt="twitter"/></span><a href="https://stackoverflow.com/users/827862/pascal-bugnion">@pascalbugnion</a></p>
+            <p class="contact-row"><span class="contact-key"><img src="img/stackoverflow.png" height=36 width=36 alt="stackoverflow"/></span><a href="https://stackoverflow.com/users/827862/pascal-bugnion">pascal-bugnion</a></p>
+          </div>
         </div>
 
     </div><!-- /.container -->
