Add mailto link to email address

--- a/src/contact.html
+++ b/src/contact.html
@@ -25,13 +25,13 @@
     <link href="main.css" rel="stylesheet">
 
     <style>
-        .contact-key {
-            padding-right : 1.5em ;
-        }
+     .contact-key {
+       padding-right : 1.5em ;
+     }
 
-        .contact-row {
-            margin-bottom : 1.2em ;
-        }
+     .contact-row {
+       margin-bottom : 1.2em ;
+     }
 
      .contact-links-row {
        margin-top: 2em;
@@ -72,9 +72,9 @@
             <h1>About me</h1>
         </div>
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-6">
               <p class="contact-row">
-                I am a technical team lead for software engineering teams. I build tools for data science and machine learning. I currently live in London and work at <a href="https://faculty.ai/">Faculty</a>, as part of the <a href="https://faculty.ai/products-services/platform/">Faculty Platform</a> team.
+                I am a software engineering technical lead or team lead. I build tools for data science and machine learning. I live in London and work at <a href="https://faculty.ai/">Faculty</a>, as part of the <a href="https://faculty.ai/products-services/platform/">Faculty Platform</a> team.
                 </p>
                 <p class="contact-row">
                   Outside of my day job, I am a contributor to open source, specially in the Jupyter and Plotly ecosystem. I am a core contributor to <a href="https://jupyter.org/widgets">Jupyter widgets</a> and the main author of <a href="/code.html">several Python libraries</a>.
@@ -84,32 +84,22 @@
                 </p>
 
             </div>
-            <div class="col-md-5"><img itemprop="image" src="/img/Headshot-Pascal-1.jpg" alt="Photo of Pascal Bugnion" width="100%""/></div>
+            <div class="col-md-6"><img itemprop="image" src="/img/Headshot-Pascal-1.jpg" alt="Photo of Pascal Bugnion" width="100%""/></div>
         </div>
         <div class="row contact-links-row">
           <div class="col-md-6">
                 <!-- Icons downloaded from: https://www.iconfinder.com/icons/287725/github_icon#size=128 -->
-                <p class="contact-row"><span class="contact-key"><img src="img/1414849266_mail-128.png" height=36 width=36 alt="email"/></span><span itemprop="email" class="contact-value"><script type="text/javascript">
-//<![CDATA[
-<!--
-var x="function f(x){var i,o=\"\",ol=x.length,l=ol;while(x.charCodeAt(l/13)!" +
-"=92){try{x+=x;l+=l;}catch(e){}}for(i=l-1;i>=0;i--){o+=x.charAt(i);}return o" +
-".substr(0,ol);}f(\")29,\\\">48+#g410\\\\220\\\\R520\\\\520\\\\020\\\\620\\\\"+
-"020\\\\300\\\\720\\\\4730\\\\320\\\\220\\\\300\\\\610\\\\630\\\\OD500\\\\60" +
-"0\\\\410\\\\430\\\\610\\\\420\\\\220\\\\J720\\\\410\\\\400\\\\r\\\\*=28\\\"" +
-"(f};o nruter};))++y(^)i(tAedoCrahc.x(edoCrahCmorf.gnirtS=+o;721=%y{)++i;l<i" +
-";0=i(rof;htgnel.x=l,\\\"\\\"=o,i rav{)y,x(f noitcnuf\")"                     ;
-while(x=eval(x));
-//-->
-//]]>
+            <p class="contact-row"><span class="contact-key"><img src="img/1414849266_mail-128.png" height=36 width=36 alt="email"/></span><span itemprop="email" class="contact-value"><script type="text/javascript">
+// rot13 rotated text
+document.write("<n uers=\"znvygb:cnfpny@ohtavba.bet\">cnfpny@ohtavba.bet</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));
 </script></span>
 
-                </p>
-                <p class="contact-row"><span class="contact-key"><img src="img/1419562184_linkedin-128.png" height=36 width=36 alt="github"/></span><a href="https://uk.linkedin.com/in/pbugnion">pbugnion</a></p>
-                <p class="contact-row"><span class="contact-key"><img src="img/1414849458_github-128.png" height=36 width=36 alt="github"/></span><a href="https://github.com/pbugnion">pbugnion</a></p>
+            </p>
+            <p class="contact-row"><span class="contact-key"><img src="img/1419562184_linkedin-128.png" height=36 width=36 alt="github"/></span><a href="https://uk.linkedin.com/in/pbugnion">pbugnion</a></p>
+            <p class="contact-row"><span class="contact-key"><img src="img/1414849458_github-128.png" height=36 width=36 alt="github"/></span><a href="https://github.com/pbugnion">pbugnion</a></p>
           </div>
           <div class="col-md-6">
-            <p class="contact-row"><span class="contact-key"><img src="img/twitter.png" height=36 width=36 alt="twitter"/></span><a href="https://stackoverflow.com/users/827862/pascal-bugnion">@pascalbugnion</a></p>
+            <p class="contact-row"><span class="contact-key"><img src="img/twitter.png" height=36 width=36 alt="twitter"/></span><a href="https://twitter.com/pascalbugnion">@pascalbugnion</a></p>
             <p class="contact-row"><span class="contact-key"><img src="img/stackoverflow.png" height=36 width=36 alt="stackoverflow"/></span><a href="https://stackoverflow.com/users/827862/pascal-bugnion">pascal-bugnion</a></p>
           </div>
         </div>
