--- a/src/contact.html
+++ b/src/contact.html
@@ -26,15 +26,23 @@
 
     <style>
      .contact-key {
-       padding-right : 1.5em ;
+       padding-right: 1.5em ;
      }
 
      .contact-row {
-       margin-bottom : 1.2em ;
+       margin-bottom: 1.2em ;
      }
 
      .contact-links-row {
        margin-top: 2em;
+     }
+
+     .contact-text {
+       text-align: justify;
+     }
+
+     .contact-text p {
+       margin-bottom: 1.2em;
      }
     </style>
 
@@ -72,22 +80,22 @@
             <h1>About me</h1>
         </div>
         <div class="row">
-            <div class="col-md-6">
-              <p class="contact-row">
+            <div class="col-md-7 contact-text">
+              <p>
                 I am a software engineering technical lead or team lead. I build tools for data science and machine learning. I live in London and work at <a href="https://faculty.ai/">Faculty</a>, as part of the <a href="https://faculty.ai/products-services/platform/">Faculty Platform</a> team.
                 </p>
-                <p class="contact-row">
+                <p>
                   Outside of my day job, I am a contributor to open source, specially in the Jupyter and Plotly ecosystem. I am a core contributor to <a href="https://jupyter.org/widgets">Jupyter widgets</a> and the main author of <a href="/code.html">several Python libraries</a>.
                 </p>
-                <p class="contact-row">
+                <p>
                   I hold a PhD from Cambridge University in <a href="https://www.tcm.phy.cam.ac.uk/people/staff.html">theoretical solid state physics</a>, working on <a href="https://en.wikipedia.org/wiki/Quantum_Monte_Carlo">quantum Monte Carlo</a> methods.
                 </p>
 
             </div>
-            <div class="col-md-6"><img itemprop="image" src="/img/Headshot-Pascal-1.jpg" alt="Photo of Pascal Bugnion" width="100%""/></div>
+            <div class="col-md-5"><img itemprop="image" src="/img/Headshot-Pascal-1.jpg" alt="Photo of Pascal Bugnion" width="100%""/></div>
         </div>
         <div class="row contact-links-row">
-          <div class="col-md-6">
+          <div class="col-md-7">
                 <!-- Icons downloaded from: https://www.iconfinder.com/icons/287725/github_icon#size=128 -->
             <p class="contact-row"><span class="contact-key"><img src="img/1414849266_mail-128.png" height=36 width=36 alt="email"/></span><span itemprop="email" class="contact-value"><script type="text/javascript">
 // rot13 rotated text
@@ -98,7 +106,7 @@ document.write("<n uers=\"znvygb:cnfpny@ohtavba.bet\">cnfpny@ohtavba.bet</n>".re
             <p class="contact-row"><span class="contact-key"><img src="img/1419562184_linkedin-128.png" height=36 width=36 alt="github"/></span><a href="https://uk.linkedin.com/in/pbugnion">pbugnion</a></p>
             <p class="contact-row"><span class="contact-key"><img src="img/1414849458_github-128.png" height=36 width=36 alt="github"/></span><a href="https://github.com/pbugnion">pbugnion</a></p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-5">
             <p class="contact-row"><span class="contact-key"><img src="img/twitter.png" height=36 width=36 alt="twitter"/></span><a href="https://twitter.com/pascalbugnion">@pascalbugnion</a></p>
             <p class="contact-row"><span class="contact-key"><img src="img/stackoverflow.png" height=36 width=36 alt="stackoverflow"/></span><a href="https://stackoverflow.com/users/827862/pascal-bugnion">pascal-bugnion</a></p>
           </div>
