--- a/src/talks.html
+++ b/src/talks.html
@@ -12,9 +12,11 @@
     'contactpp', a library for generating pseudopotentials for the contact interaction, and
     'bibscrape', a series of shell scripts for downloading bibtex citations from journal websites." />
 
-     <!-- Twitter Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <!-- Twitter Bootstrap -->
+    <!-- JQuery is needed for Bootstrap to work -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <!-- Google analytics -->
     <script src="google-analytics.js"></script>
@@ -51,30 +53,20 @@
 
   <body>
 
-  <div id="page-wrapper">
-
-    <div class="navbar navbar-fixed-top" role="navigation" id="top-navbar">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top" id="top-navbar">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Pascal Bugnion</a>
-        </div>
+        <a class="navbar-brand" href="/index.html">Pascal Bugnion</a>
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="code.html">Code</a></li>
-            <li class="active"><a href="#">Talks</a></li>
-            <li><a href="http://www.scala4datascience.com">Book</a></li>
-            <li><a href="blog/index.html">Blog</a></li>
-            <li><a href="contact.html">About</a></li>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="code.html" class="nav-link">Code</a></li>
+            <li class="nav-item active"><a href="#" class="nav-link">Talks</a></li>
+            <li class="nav-item"><a href="http://www.scala4datascience.com" class="nav-link">Book</a></li>
+            <li class="nav-item"><a href="blog/index.html" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link">About</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
-    </div>
+    </nav>
 
     <div class="container content-container">
 
@@ -169,6 +161,5 @@
     </div><!-- /.container -->
 
 
-  </div>
   </body>
 </html>
