--- a/src/talks.html
+++ b/src/talks.html
@@ -43,6 +43,17 @@
      .slide-title {
        padding-top: 0;
        margin-top: 0;
+       font-size: 24px;
+     }
+
+     .page-header {
+       border-bottom: 1px solid #eee;
+       margin-bottom: 20px;
+       padding-bottom: 9px;
+     }
+
+     .page-header h1 {
+       font-size: 2.3rem;
      }
     </style>
 
