--- a/src/contact.html
+++ b/src/contact.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <script src="https://code.jquery.com/jquery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
@@ -11,8 +10,9 @@
     <meta name="description" content="Contact details and general biographical information." />
 
      <!-- Twitter Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <!-- Google analytics -->
     <script src="google-analytics.js"></script>
@@ -52,27 +52,20 @@
 
 	<div itemscope itemtype="http://www.schema.org/Person">
 
-    <div class="navbar navbar-fixed-top" role="navigation" id="top-navbar">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top" id="top-navbar">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html" itemprop="name"><span itemprop="givenName">Pascal</span> <span itemprop="familyName">Bugnion</span></a>
-        </div>
+        <a class="navbar-brand" href="/index.html">Pascal Bugnion</a>
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="code.html">Code</a></li>
-            <li><a href="talks.html">Talks</a></li>
-            <li><a href="http://www.scala4datascience.com">Book</a></li> <li><a href="blog/index.html">Blog</a></li>
-            <li class="active"><a href="contact.html">About</a></li>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="code.html" class="nav-link">Code</a></li>
+            <li class="nav-item"><a href="talks.html" class="nav-link">Talks</a></li>
+            <li class="nav-item"><a href="http://www.scala4datascience.com" class="nav-link">Book</a></li>
+            <li class="nav-item"><a href="blog/index.html" class="nav-link">Blog</a></li>
+            <li class="nav-item active"><a href="#" class="nav-link">About</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
-    </div>
+    </nav>
 
     <div class="container content-container">
 
@@ -82,7 +75,7 @@
         <div class="row">
             <div class="col-md-7 contact-text">
               <p>
-                I am a software engineering technical lead or team lead. I build tools for data science and machine learning. I live in London and work at <a href="https://faculty.ai/">Faculty</a>, as part of the <a href="https://faculty.ai/products-services/platform/">Faculty Platform</a> team.
+                I am a software engineering technical lead. I build tools for data science and machine learning. I live in London and work at <a href="https://faculty.ai/">Faculty</a>, as part of the <a href="https://faculty.ai/products-services/platform/">Faculty Platform</a> team.
                 </p>
                 <p>
                   Outside of my day job, I am a contributor to open source, specially in the Jupyter and Plotly ecosystem. I am a core contributor to <a href="https://jupyter.org/widgets">Jupyter widgets</a> and the main author of <a href="/code.html">several Python libraries</a>.
