Update code tabs for bootstrap 4

--- a/src/code.html
+++ b/src/code.html
@@ -119,14 +119,14 @@
 
         <div id="code-panels">
         <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
-            <li role="presentation"><a href="#gmaps" role="tab" data-toggle="tab">gmaps</a></li>
-            <li role="presentation"><a href="#widgets" role="tab" data-toggle="tab">Jupyter widgets</a></li>
-            <li role="presentation"><a href="#dash-bootstrap-components" role="tab" data-toggle="tab">Dash Bootstrap components</a></li>
+            <li role="presentation" class="nav-item"><a class="nav-link" href="#home" role="tab" data-toggle="tab">Home</a></li>
+            <li role="presentation" class="nav-item"><a class="nav-link" href="#gmaps" role="tab" data-toggle="tab">gmaps</a></li>
+            <li role="presentation" class="nav-item"><a class="nav-link" href="#widgets" role="tab" data-toggle="tab">Jupyter widgets</a></li>
+            <li role="presentation" class="nav-item"><a class="nav-link" href="#dash-bootstrap-components" role="tab" data-toggle="tab">Dash Bootstrap components</a></li>
         </ul>
 
         <div class="tab-content">
-            <div role="tabpanel" class="tab-pane fade in active" id=home>
+            <div role="tabpanel" class="tab-pane fade in active code-tabpane" id=home>
                 <h2>Code</h2>
 
                 <p> I work on several open-source libraries, mostly revolving
