--- a/src/code.html
+++ b/src/code.html
@@ -105,11 +105,11 @@
         <a class="navbar-brand" href="/index.html">Pascal Bugnion</a>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav">
-            <li class="nav-item"><a href="code.html" class="nav-link">Code</a></li>
-            <li class="nav-item"><a href="talks.html" class="nav-link">Talks</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Code</a></li>
+            <li class="nav-item"><a href="/talks.html" class="nav-link">Talks</a></li>
             <li class="nav-item"><a href="http://www.scala4datascience.com" class="nav-link">Book</a></li>
             <li class="nav-item"><a href="blog/index.html" class="nav-link">Blog</a></li>
-            <li class="nav-item active"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item active"><a href="/contact.html" class="nav-link">About</a></li>
           </ul>
         </div>
       </div>
