--- a/src/code.html
+++ b/src/code.html
@@ -129,6 +129,7 @@
 
     <div class="container content-container">
       <div class="card-columns">
+
         <div class="card card-container">
           <div class="card-body">
             <h2 class="heading">gmaps</h2>
@@ -150,12 +151,29 @@
             <a class="expand-button" href="#gmaps-collapse" role="button" data-toggle="collapse">Expand</a>
           </div>
         </div>
+
         <div class="card card-container">
-          <div class="card-content">
-            <h2 class="heading">Dash bootstrap components</h2>
+          <div class="card-body">
+            <h2 class="heading">Dash Bootstrap components</h2>
             <p class="lead">Responsive layouts and components for Plotly Dash</p>
+            <img src="/img/dbc.png" width="100%" />
+            <div class="collapse" id="dbc-collapse">
+              <p>
+                Dash Bootstrap components makes it easy to structure and build your <a href="https://dash.plot.ly/">Plotly Dash</a> applications by providing layouts and high-level components that wrap Twitter Bootstrap. It allows data scientists to build engaging, responsive dashboards without worrying about the details of CSS and styling.
+              </p>
+              <p>
+                I work on Dash Bootstrap components with <a href="https://tcbegley.com/">Tom Begley</a>.
+              </p>
+              <div class="clearfix">
+                <a href="https://github.com/facultyai/dash-bootstrap-components" class="float-left">GitHub</a><a href="https://dash-bootstrap-components.opensource.faculty.ai/" class="float-right">Documentation</a>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <a class="expand-button" href="#dbc-collapse" role="button" data-toggle="collapse">Expand</a>
           </div>
         </div>
+
         <div class="card card-container">
           <div class="card-content">
             <h2 class="heading">Faculty platform</h2>
