Set max-width for contact page

--- a/src/contact.html
+++ b/src/contact.html
@@ -44,6 +44,11 @@
      .headshot-img-container {
        margin-bottom: 1em;
      }
+
+     /* Disable the xl- part of boostrap */
+     .container {
+       max-width: 960px;
+     }
     </style>
 
   </head>
