Add copy for Faculty platform

--- a/src/code.html
+++ b/src/code.html
@@ -175,9 +175,30 @@
         </div>
 
         <div class="card card-container">
-          <div class="card-content">
+          <div class="card-body">
             <h2 class="heading">Faculty platform</h2>
-            <p class="lead">Something something</p>
+            <p class="lead">A data science workbench for teams</p>
+            <img src="/img/faculty-platform.png" width="100%" />
+            <div class="collapse" id="faculty-platform-collapse">
+              <p>
+                <a href="https://faculty.ai/products-services/platform/">Faculty platform</a> aims to be the place in which data science is done for teams. By creating a shared execution environment in which data scientists can operate in, as well as a place to host models and keep track of experiments, it reduces the friction associated with the operation of a data science team.
+              </p>
+              <p>
+                It is typically deployed inside an organisation's infrastructure, allowing data scientists to access databases behind corporate firewalls.
+              </p>
+              <p>
+                Faculty platform is powered by open source tools, such as the <a href="https://jupyter.org/">Jupyter</a> ecosystem, <a href="https://mlflow.org/">MLFlow</a>, and <a href="https://plot.ly/dash/">Plotly Dash</a>.
+              </p>
+              <p>
+                Faculty Platform is developed by Faculty. I work predominantly on backend application code and the infrastructure layer. I also have technical lead and, occasionally, product ownership responsibilities. As the first engineer to work on the platform team, I have guided the growth and development of the platform since its inception.
+              </p>
+              <div class="clearfix">
+                <a href="https://faculty.ai/products-services/platform/" class="float-left">Website</a><a href="https://docs.faculty.ai/" class="float-right">Documentation</a>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <a class="expand-button" href="#faculty-platform-collapse" role="button" data-toggle="collapse">Expand</a>
           </div>
         </div>
         <div class="card card-container">
